# Mywebsite

./: .gitignore  _quarto.yml  about.qmd  contact.qmd  cv.qmd  index.qmd  projects.qmd  pyproject.toml  tools.qmd
_site/: about.html  contact.html  cv.html  index.html  projects.html  robots.txt  search.json  sitemap.xml  styles.css  tools.html
_site/site_libs/bootstrap/: bootstrap-02657a205072e2a1acb7a0a2affdd672.min.css
docs/: CNAME  contact.html  index.html  projects.html  search.json
