[tool.poetry]
name = "mywebsite"
version = "0.1.0"
description = ""
authors = ["Sundarajan Swaminathan <197950402+sundars96@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
